objects/sixsense__Batch_Log_Chunk__c.object
<CustomObject>
    <fields>
        <fullName>sixsense__Batch_Log__c</fullName>
        <label>Batch Log</label>
        <referenceTo>sixsense__Batch_Log__c</referenceTo>
        <relationshipName>Batch_Log_Chunks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sixsense__Callout_Time__c</fullName>
        <label>Callout Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Count_Duplicate__c</fullName>
        <label>Count Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Count_Error__c</fullName>
        <label>Count Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Count_Ignored__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field holds the count of records encountered which are ignorable errors. Typically, missing references to deleted related records.</description>
        <label>Count Ignored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Count_Success__c</fullName>
        <label>Count Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Expected_Records__c</fullName>
        <label>Expected Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Page_Number__c</fullName>
        <label>Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Processing_End_Time__c</fullName>
        <label>Processing End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sixsense__Processing_Start_Time__c</fullName>
        <label>Processing Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>6sense Batch Log Chunk</label>
    <nameField>
        <displayFormat>BLC-{00000000}</displayFormat>
        <label>Batch Log Chunk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>6sense Batch Log Chunks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>